apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-webui
  namespace: qbittorrent
  annotations:
      metallb.io/loadBalancerIPs: "192.168.0.201"
      metallb.io/allow-shared-ip: "qbittorrent"
spec:
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tcp
  namespace: qbittorrent
  annotations:
      metallb.io/loadBalancerIPs: "192.168.0.201"
      metallb.io/allow-shared-ip: "qbittorrent"
spec:
  selector:
    app: qbittorrent
  ports:
  - name: bittorrent-tcp
    port: 43434
    targetPort: 43434
    protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-udp
  namespace: qbittorrent
  annotations:
      metallb.io/loadBalancerIPs: "192.168.0.201"
      metallb.io/allow-shared-ip: "qbittorrent"
spec:
  selector:
    app: qbittorrent
  ports:
  - name: bittorrent-udp
    port: 43434
    targetPort: 43434
    protocol: UDP
  type: LoadBalancer
  externalTrafficPolicy: Local
